transforms and analyses overview

--- a/common/analyses.tex
+++ b/common/analyses.tex
@@ -14,21 +14,17 @@
   {../common/people/fourier_bunzil_wkp_pdomain_gray.jpg}
   %{Mathematics compares the most diverse phenomena and discovers the secret analogies that unite them.}
   {%
-  The analytical equations
-  \ldots
-  %, unknown to the ancient geometers, which Descartes was the first to introduce into the study of curves and surfaces, 
-  %are not restricted to the properties of figures, and to 
-  %those properties which are the object of rational mechanics ; they 
-  extend to all general phenomena. 
+  The analytical equations, unknown to the ancient geometers, which Descartes was the first to introduce into the study of curves and surfaces, 
+  \ldots %are not restricted to the properties of figures, and to those properties which are the object of rational mechanics ; 
+  they extend to all general phenomena. 
   There cannot be a language more universal and more simple, 
   more free from errors and from obscurities, 
   \ldots
   %that is to say more worthy to express the invariable relations of natural things. 
   %Considered from this point of view, 
   mathematical analysis is as extensive as nature itself; 
-  \ldots
-  %it defines all perceptible relations, measures times, spaces, forces, temperatures ; 
-  %this difficult science is formed slowly, but 
+  it defines all perceptible relations, measures times, spaces, forces, temperatures ; 
+  this difficult science is formed slowly, but 
   it preserves every principle which it has once acquired; 
   it grows and strengthens itself incessantly in the midst of the many variations and errors of the human mind. 
   Its chief attribute is clearness; it has no marks to express confused notions. 
@@ -41,20 +37,19 @@
 %=======================================
 \section{Abstract spaces}
 %=======================================
-The abstract space was introduced by Maurice Fr{/'e}chet in his 1906 Ph.D. thesis.
-\citetbl{
-  \citor{frechet1906},
-  \citor{frechet1928}.
+The \structd{abstract space} was introduced by Maurice Fr/'echet in his 1906 Ph.D. thesis.\footnote{
+  \citeP{frechet1906},
+  \citer{frechet1928}.
   %\citerp{frechet1950}{147}
-   ``A collection of these abstract elements will be called an \emph{abstract set}.
+   {\fntquote``A collection of these abstract elements will be called an \emph{abstract set}.
    If to this set there is added some rule of association of these elements,
    or some relation between them,
-   the set will be called an \emph{abstract space}."---Maurice Fr{/'e}chet
+   the set will be called an \emph{abstract space}."}---Maurice Fr/'echet
   }
-An abstract \hid{space} in mathematics does not really have a rigorous definition;
+An \structe{abstract space} in mathematics does not really have a rigorous definition;
 but in general it is a set together with some other unifying structure.
-
-Examples of spaces include topological spaces, metric spaces, and linear spaces (vector spaces).
+Examples of spaces include \structe{topological space}s, \structe{metric space}s, and \structe{linear space}s 
+(\structe{vector space}s).
 
 %=======================================
 \section{Lattice of subspaces}
@@ -67,8 +62,7 @@ to form a \structe{lattice}.
 
 \begin{figure}[th]
 \begin{center}
-%\input{../common/math/graphics/latlattopxyz.tex}%
-%\input{latlattopxyz_eps_rgb.tex}
+\includegraphics{../common/math/graphics/pdfs/latlattopxyz.pdf}%
 \end{center}
 \caption{
   lattice of topologies on $\setX\eqd\setn{x,y,z}$ \xref{ex:set_lat_top_xyz}
@@ -101,57 +95,33 @@ are also \hie{algebras of sets}\ifsxref{setstrct}{def:algsets}.
 %Furthermore, \prefpp{fig:set_lat_top_xyz_d} redraws each of the 29 topological lattices 
 %in a simpler unlabeled form demonstrating the distributive property of the topologies.
 \end{example}%
-\end{minipage}%
-\hfill%
-%\addtocounter{footnote}{-1}%
-\citetblt{%
+\end{minipage}\hfill%
+\footnote{%
   \citerp{isham1999}{44},
   \citerp{isham1989}{1516},
   \citerp{steiner1966}{386}
+  %\citer{freese_latdraw}
   }%
-%\stepcounter{footnote}%
-%\citetblt{%
-%  \citer{freese_latdraw}
-%  }%
-\begin{minipage}{42mm}%
-%\setlength{\unitlength}{\tw/400}
-%\input{../common/math/graphics/pdfs/lat2xyzdotted.pdf}
-\end{minipage}%
+\tbox{\includegraphics{../common/math/graphics/pdfs/lat2xyzdotted.pdf}}
 
+%\includegraphics{subspace.tex}
 
-%\begin{figure}[th]
-%\begin{center}
-%  \input{../common/math/graphics/lattopxyz.tex}%
-%\end{center}
-%\caption{
-%  Lattice of topologies of $\sid\eqd\setn{x,y,z}$ (see \prefp{ex:set_lat_top_xyz})
-%  \label{fig:set_lat_top_xyz}
-%  }
-%\end{figure}
-
-
-%\input{subspace.tex}
-
-\begin{figure}[th]
-\begin{center}
-%{\psset{unit=24mm}{\input{../common/math/graphics/pdfs/latlatalgwxyz.pdf}}}
-\caption{%
-  lattice of \structe{algebras of sets} on $\setn{w,x,y,z}$ \xref{ex:algsets_wxyz}
-  \label{fig:algsets_wxyz}
-  }
-\end{center}
+\begin{figure}
+  \centering
+  \includegraphics{../common/math/graphics/pdfs/latlatalgwxyz.pdf}
+  \caption{%
+    lattice of \structe{algebras of sets} on $\setn{w,x,y,z}$ \xref{ex:algsets_wxyz}
+    \label{fig:algsets_wxyz}
+    }
 \end{figure}
-
 %---------------------------------------
 \begin{example}
 \label{ex:algsets_wxyz}
 %---------------------------------------
 The power set $\psetX$ is an \structe{algebra of sets} on the set $\setX$.
-%If $\setX\eqd\setn{w,x,y,z}$, then $\pset{\setn{w,x,y,z}}$ is an algebra of sets on $\setX$. 
 But there are also 14 other algebras of sets on $\setn{w,x,y,z}$, and these are all \structe{subspaces} of $\pset{\setn{w,x,y,z}}$.
-The lattice of algebras of sets on $\setn{w,x,y,z}$ is illustrated in \prefpp{fig:algsets_wxyz}. 
+The \structe{lattice of algebras of sets} on $\setn{w,x,y,z}$ is illustrated in \prefpp{fig:algsets_wxyz}. 
 \end{example}%
-
 
 %=======================================
 %\section{Lattice of linear subspaces}
@@ -161,10 +131,9 @@ Linear subspaces have some special properties:
 Every linear subspace contains the additive identity zero vector, and every linear subspace is \prope{convex}.
 
 \begin{figure}[th]
-\begin{center}
-%  \input{../common/math/graphics/pdfs/latr3subspaces.pdf}
+  \centering
+  \includegraphics{../common/math/graphics/pdfs/latr3subspaces.pdf}
   \caption{lattice of subspaces of $\R^3$ \xref{ex:r3subspaces}\label{fig:latr3subspaces}}
-\end{center}
 \end{figure}
 %--------------------------------------
 %--------------------------------------
@@ -175,51 +144,8 @@ Every linear subspace contains the additive identity zero vector, and every line
   which in turn both contain the 1-dimensional $x$-axis subspace.
   These subspaces are illustrated in the figure to the right and in \prefpp{fig:latr3subspaces}.
 \end{example}
-\end{minipage}%
-\hfill%
-\begin{minipage}{60mm}%
-  \psset{unit=7.5mm}%
-  \begin{center}
-  \footnotesize%
-%  \input{../common/math/graphics/pdfs/r3subspaces_xy.pdf}%
-  \end{center}
-\end{minipage}
-
-%\begin{minipage}{60mm}%
-%  \color{figcolor}
-%  \begin{center}
-%  \footnotesize
-%  \setlength{\unitlength}{0.15mm}%
-%  \begin{picture}(280,250)(-100,-100)%
-%    \thicklines%
-%    %{\color{graphpaper}\graphpaper[10](-100,-100)(250,250)}%
-%    {\color{blue}%
-%      \put(-100,   0){\line( 1, 0){200} }%
-%      \put(-100,   0){\line( 1, 1){ 50} }%
-%      \put( 100,   0){\line( 1, 1){ 50} }%
-%      \put( -50,  50){\line( 1, 0){ 50} }%
-%      \put(  50,  50){\line( 1, 0){100} }%
-%      \put( -10, 100){\makebox(0,0)[br]{subspace $\spX$}}%
-%      \put( -30, 100){\vector(0,-1){75}}
-%      }%
-%    {\color{red}%
-%      \put(   0,-100){\line( 0, 1){200} }%
-%      \put(   0, 100){\line( 1, 1){ 50} }%
-%      \put(   0,-100){\line( 1, 1){ 50} }%
-%      \put(  50,  50){\line( 0, 1){100} }%
-%      \put(  50, -50){\line( 0, 1){ 50} }%
-%      \put(  70,  90){\makebox(0,0)[l]{subspace $\spY$}}%
-%      \put(  60,  90){\vector(-1,0){35}}
-%      }%
-%    {\color{purple}%
-%      \put(  70, -30){\makebox(0,0)[tl]{subspace $\spX\spi \spY$}}%
-%      \put(  75, -25){\vector(-1,1){50}}
-%      \put(   0,   0){\line( 1, 1){ 50} }%
-%      }%
-%  \end{picture}%
-%  \end{center}
-%\end{minipage}
-
+\end{minipage}\hfill%
+\tbox{\includegraphics{../common/math/graphics/pdfs/r3subspaces_xy.pdf}}
 
 %=======================================
 \section{Analyses}
@@ -237,11 +163,12 @@ An \opd{analysis} of a space $\spX$ is any lattice of subspaces of $\spX$.
   (\citer{collins2009}, \scs\url{http://dictionary.reference.com/browse/dissolution})
   }
 
-\begin{figure}[th]
+\begin{figure}
+  \centering
   \begin{tabular}{*{3}{>{\scs}c}}
-    % \input{../common/math/graphics/latr3linear.tex}%
-    %&\input{../common/math/graphics/latr3m3.tex}%
-    %&\input{../common/math/graphics/latr3mra.tex}%
+    % \includegraphics{../common/math/graphics/latr3linear.tex}%
+    %&\includegraphics{../common/math/graphics/latr3m3.tex}%
+    %&\includegraphics{../common/math/graphics/latr3mra.tex}%
     \\linearly ordered analysis of $\R^3$
     &M-3 analysis of $\R^3$
     &wavelet-like analysis of $\R^3$
@@ -308,7 +235,7 @@ One is that they satisfy \prope{de Morgan's law}.
 
 %---------------------------------------
 \begin{theorem}
-\citetbl{
+\footnote{
   %\citerppg{beran1985}{30}{31}{902771715X}
   \citerppg{beran1985}{30}{33}{902771715X},
   \citorpc{birkhoffjvn1936}{830}{L74},
@@ -339,15 +266,15 @@ Let $\latL\eqd\latocd$ be an algebraic structure.
 \hline%
 \mc{1}{B}{Cosine analysis  (even Fourier series)} & \mc{1}{B}{Cosine polynomial analysis}%
 \\%
-  \input{../common/math/graphics/pdfs/baslat_cosh.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_cosh.pdf}%
 &%
-  \input{../common/math/graphics/pdfs/baslat_cose.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_cose.pdf}%
 \\\hline%
 \mc{1}{|B|}{Chebyshev polynomial analysis\cittrpg{rivlin1974}{4}{047172470X}}&\mc{1}{|B|}{Hadamard-3 analysis}%
 \\%
-  \input{../common/math/graphics/pdfs/baslat_cheby.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_cheby.pdf}%
 &%
-  \input{../common/math/graphics/pdfs/baslat_h3.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_h3.pdf}%
 \\\hline%
 \end{tabular}%
   \end{fsL}%
@@ -371,7 +298,7 @@ Let $\latL\eqd\latocd$ be an algebraic structure.
 {\begin{minipage}{60mm}%
   \begin{center}
 %  \mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-  \input{../common/math/graphics/pdfs/latmn.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/latmn.pdf}%
   \end{center}
 \end{minipage}}
 
@@ -485,71 +412,12 @@ Let $\latL\eqd\latocd$ be an algebraic structure.
 %=======================================
 \section{Operator inducing analyses}
 %=======================================
-An \structe{analysis} is often defined in terms of a small number (e.g. 2) operators.
-Two such operators are the \ope{translation operator} and the \ope{dilation operator} (next).
-
-%---------------------------------------
-\begin{definition}
-\citetbl{
-  \citerppgc{walnut2002}{79}{80}{0817639624}{Definition 3.39},
-  \citerppg{christensen2003}{41}{42}{0817642951},
-  \citerpgc{wojtaszczyk1997}{18}{0521578949}{Definitions 2.3,2.4},
-  \citerpg{kammler2008}{A-21}{0521883407},
-  \citerpg{bachman2000}{473}{0387988998},
-  \citerpg{packer2004}{260}{0821834029}, %{section 3.1},
-  \citerpg{zayed2004}{}{0817643044},
-  \citerpgc{heil2011}{250}{0817646868}{Notation 9.4},
-  \citerpg{casazza1998}{74}{0817639594},
-  \citerp{goodman1993}{639},
-  \citerp{dai1996}{81},
-  \citerpg{dai1998}{2}{0821808001}
-  %\citerpg{dai1998}{21}{0821808001}
-  }
-\label{def:wav_opT}
-\label{def:wav_opD}
-\label{def:wavstrct_TD}
-\label{def:opT}
-\label{def:opD}
-%---------------------------------------
-Let $\spX\eqd\spLLR$ be the space of all \structe{square Lebesgue integrable functions}\ifsxref{transop}{def:spLLR}.
-Let $\opTrn$ and $\opDil$ be operators in $\clOxx$.
-Let $\C$ be the set of complex numbers,
-and $\hxs{\spLLR}$ the set of all functions with range $\C$ and domain $\C$.
-\defbox{\begin{array}{Frc>{\ds}lMlC}
-    1. & \mc{6}{M}{$\hxs{\opTrn}$ is the \hid{translation operator} on $\spCC$ defined as}\\
-       & \indentx\hxs{\opTrn_\tau}  \ff(x) &\eqd&         \ff(x-\tau) &and& \hxs{\opTrn}\eqd\opTrn_1 & \forall \ff\in\spCC
-       \\
-    2. & \mc{6}{M}{$\hxs{\opDil}$ is the \hid{dilation operator} on $\spCC$ defined as}\\
-       & \indentx\hxs{\opDil_\alpha} \ff(x) &\eqd& \ff(\alpha x) &and& \opDil\eqd\sqrt{2}\opDil_2 & \forall \ff\in\spCC
-\end{array}}
-\end{definition}
-
-{\begin{center}
-\psset{unit=10mm}%
-\begin{pspicture}(-2.5,-0.6)(2.5,2)%
-  \psset{linewidth=1pt}%
-  \psaxes[linecolor=axis,labels=x]{->}(0,0)(-2.5,0)(2.5,2)%
-  \uput[0](2.5,0){$t$}%
-  \psline[linecolor=purple](-2,0)(-1,1)(0,0)% T^{-1}x
-  \psline[linecolor=blue]  (-1,0)( 0,1)(1,0)% x
-  \psline[linecolor=red]   ( 0,0)( 1,1)(2,0)% T^1 x
-  \uput[135](-1,1){$\opTrni\ff(x)$}%
-  \uput[45] ( 0,1){$\ff(x)$}%
-  \uput[45] ( 1,1){$\opTrn\ff(x)$}%
-\end{pspicture}%
-\hspace{10mm}
-\begin{pspicture}(-2.5,-0.6)(2.5,2)%
-  \psset{linewidth=1pt}%
-  \psaxes[linecolor=axis,labels=x]{->}(0,0)(-2.5,0)(2.5,2)%
-  \uput[0](2.5,0){$t$}%
-  \psline[linecolor=purple](-2,  0)( 0,0.707)(2,  0)% D^{-1}x
-  \psline[linecolor=blue]  (-1,  0)( 0,1    )(1,  0)% x
-  \psline[linecolor=red]   (-0.5,0)( 0,1.414)(0.5,0)% D x
-  \uput[135]( 0,1.414){$\opDil\ff(x)$}%
-  \uput[45]( 0.5,0.5)    {$\ff(x)$}%
-  \uput[45](1.5,0.25){$\opDili\ff(x)$}%
-\end{pspicture}%
-\end{center}}
+\tboxc{\includegraphics{graphics/opTrn.pdf}}\hfill
+\begin{minipage}{\tw-120mm}
+  An \structe{analysis} is often defined in terms of \\a small number (e.g. 2) operators.
+  Two such operators are the \ope{translation operator} and the \ope{dilation operator}\ifsxref{transop}{def:opTD}.
+\end{minipage}
+\hfill\tboxc{\includegraphics{graphics/opDil.pdf}}
 
 %---------------------------------------
 \begin{example}
@@ -557,7 +425,7 @@ and $\hxs{\spLLR}$ the set of all functions with range $\C$ and domain $\C$.
 In \structe{Fourier analysis}, \prop{continuous} {dilations} \xref{def:opD} of the \fncte{complex exponential}\ifsxref{numsys}{def:exp}
 form a  \structe{basis}\ifsxref{frames}{def:basis_schauder} for the \structe{space of square integrable functions} $\spLLR$\ifsxref{frames}{def:spLLR} 
 such that
-  \\\indentx$\ds\spLLR=\linspan\set{\opDil_\omega e^{ix}}{\scy\omega\in\R}$.
+\quad$\ds\spLLR=\linspan\set{\opDil_\omega e^{ix}}{\scy\omega\in\R}$.
 \end{example}
 
 %---------------------------------------
@@ -565,194 +433,45 @@ such that
 %---------------------------------------
 In \structe{Fourier series analysis}\ifsxref{harPoly}{thm:opFSi}, \prop{discrete} dilations of the complex exponential 
 form a  basis for $\spLL{\intoo{0}{2\pi}}$ such that
-  \\\indentx$\ds\spLL{\intoo{0}{2\pi}}=\linspan\setjZ{\opDil_j e^{ix}}$.
+\quad$\ds\spLL{\intoo{0}{2\pi}}=\linspan\setjZ{\opDil_j e^{ix}}$.
 \end{example}
-
-
 
 %=======================================
 \section{Wavelet analyses}
 %=======================================
-%In Wavelet analysis, for some \fncte{mother wavelet} \xref{def:wavelet} $\fpsi(x)$,
-%  \\\indentx$\ds\spLLR=\linspan\set{\opDil_\omega\opTrn_\tau \fpsi(x)}{\omega,\tau\in\R}$.
-%
-%However, the ranges of parameters $\omega$ and $\tau$ can be much reduced to the countable set $\Z$ resulting in
-%a \prope{dyadic} wavelet basis such that for some mother wavelet $\fpsi(x)$,
-%  \\\indentx$\ds\spLLR=\linspan\set{\opDil^j\opTrn^n \fpsi(x)}{j,n\in\Z}$.\\
-%This text deals almost exclusively with dyadic wavelets. 
-%Wavelets that are both \prope{dyadic} and \prope{compactly supported} have the attractive feature 
-%that they can be easily implemented in hardware or software by use of the 
-%\structe{Fast Wavelet Transform} \xref{fig:fwt}.
-%\mbox{}\\
-%\begin{minipage}{\tw-65mm}
-  In 1989, St{/'e}phane G. Mallat introduced the \structe{Multiresolution Analysis} (MRA, \prefp{def:mra})
-  method for wavelet construction. The MRA has become the dominate wavelet construction method.
-  %This paper uses the MRA method extensively, 
-  %and combines the MRA ``scaling subspaces" \xref{def:mra} with ``wavelet subspaces" \xref{def:seqWn} 
-  %to form a subspace structure as represented by the 
-  %\structe{Hasse diagram} to the right.
-  %The \structe{Fast Wavelet Transform} combines both sets of subspaces as well, 
-  %providing the results of projections onto both wavelet and MRA subspaces.
-  %The MRA is not the only method of wavelet construction,
-  Moreover, P.G. Lemari{/'e} has proved that all wavelets with \prope{compact support} are generated by an MRA.\footnotemark
-%\end{minipage}\hfill%
-%\begin{minipage}{60mm}
-%  \input{../common/wavelets/graphics/latwav.tex}%
-%\end{minipage}
-\citetblt{
-  \citor{lemarie1990}
-  \citerpg{mallat}{240}{012466606X}
-  }
-
-
-%A multiresolution analysis provides ``coarse" approximations of a function in a linear space $\spLLR$ at multiple
-%``scales" or ``resolutions".
-%%\paragraph{Scaling function.}
-%Key to this process is a sequence of \hie{scaling functions}.
-%Most traditional transforms feature a single \hie{scaling function} $\fphi(x)$
-%set equal to one ($\fphi(x)=1$).
-%This allows for convenient representation of the most basic functions, such as constants.\citep{jawerth}{8}
-%A multiresolution system, on the other hand, uses a generalized form of the scaling concept:
-%\begin{dingautolist}{"AC}
-%  \item Instead of the scaling function simply being set \emph{equal to unity} ($\fphi(x)=1$),
-%        a multiresolution system \xref{def:mrasys} is often constructed in such a way that the scaling function 
-%        $\fphi(x)$ forms a \hie{partition of unity} \xref{def:pun} such that
-%        $\sum_{n\in\Z} \opTrn^n\fphi(x) = 1$.
-%  \item Instead of there being \emph{just one} scaling function, there
-%        is an entire sequence of scaling functions $\seqjZ{\opDil^j\fphi(x)}$, 
-%        each corresponding to a different ``\hie{resolution}".
-%\end{dingautolist}
-
-%--------------------------------------
-\begin{definition}% [multiresolution system]
-\citetbl{
-  \citerpg{hernandez1996}{44}{0849382742}
-  \citerpgc{mallat}{221}{012466606X}{Definition 7.1} 
-  \citorp{mallat89}{70}
-  \citorpgc{meyer1992}{21}{0521458692}{Definition 2.2.1}
-  \citerpgc{christensen2003}{284}{0817642951}{Definition 13.1.1}
-  \citerppgc{bachman2000}{451}{452}{0387988998}{Definition 7.7.6}
-  \citerppgc{walnut2002}{300}{301}{0817639624}{Definition 10.16}
- %\citerppgc{vidakovic}{51}{52}{0471293652}{Riesz basis: footnote on page 52}
-  \citerppgc{dau}{129}{140}{0898712742}{Riesz basis: page 139}
-  %\citerppgc{christensen2003}{73}{74}{0817642951}{Definition 3.8.2}
-  %\citerpgc{heil2011}{371}{0817646868}{Definition 12.8}
-  %\citerpgc{walter}{38}{1584882271}{3.1 Multiresolution Analysis}
-  }
-\label{def:seqVn}
-\label{def:mra}
-\label{def:wavstrct_phi}
-%--------------------------------------
-%Let $\spLLR$ be the space of all \structe{square Lebesgue integrable functions}\ifsxref{transop}{def:spLLR}.
-Let $\seqjZ{\spV_j}$ be a sequence of subspaces on $\spLLR$\ifsxref{transop}{def:spLLR}.  %be a \prope{separable} \structe{Hilbert space}.
-Let $\clsA$ be the \structe{closure} of a set $\setA$.
-\\\defboxt{
-  The sequence $\seqjZ{\spV_j}$ is a \hid{multiresolution analysis} on $\spLLR$ if
-  \\
-  $\begin{array}{@{\qquad}F>{\ds}lCDD}
-   %1. & \spV_j \text{ is a linear subspace of $\spX$}\qquad \forall \spV_j\in\seqjZ{\spV_j}
-    %\cnto & \mc{2}{M}{$\spLLR$ is \prope{complete}}                       & ($\spLLR$ is a \structe{Hilbert Space})         & and
-    %\cntn & \mc{2}{M}{$\spLLR$ is \prope{separable}}                      &                                               & and
-    \cnto & \spV_j          = \cls{\spV_j}              & \forall j\in\Z                 & (\prope{closed})                              & and 
-    \cntn & \spV_j          \subset \spV_{j+1}          & \forall j\in\Z                 & (\prope{linearly ordered})                    & and 
-    \cntn & \clsp{\Setu_{j\in\Z} \spV_j} = \spLLR         &                                & (\prope{dense} in $\spLLR$)    & and 
-   %\cntn & \Seti_{j\in\Z} \spV_j = \setn{\vzero}       &                                & (\structe{greatest lower bound} is $\spZero$) & and 
-    \cntn & \ff\in\spV_j \iff    \opDil\ff\in\spV_{j+1} & \forall j\in\Z,\,\ff\in\spLLR  & (\prope{self-similar})                        & and
-   %\cntn & \ff\in\spV_j \iff    \opTrn\ff\in\spV_j     & \forall n\in\Z,\,\ff\in\spLLR  & (\prope{translation invariant})               & and 
-    \cntn & \mc{3}{l}{\ds\exists \fphi \st \setxZ{\opTrn^n\fphi} \text{ is a \structe{Riesz basis} for $\spV_0$.}}                       & 
-  \end{array}$
-  \\
-  A \structe{multiresolution analysis} is also called an \hid{MRA}.\\
-  An element $\spV_j$ of $\seqjZ{\spV_j}$ is a \hid{scaling subspace} of the space $\spLLR$.\\
-  The pair $\hxs{\MRAspaceLLRV}$ is a \hid{multiresolution analysis space}, or \hid{MRA space}.\\
-  The function $\hxs{\fphi}$ is the \hid{scaling function} of the \structe{MRA space}.
-  }
-\end{definition}
-
-The traditional definition of the \structe{MRA} also includes the following:
-  \\\indentx$\begin{array}{F>{\ds}lCD}
-      \cntn & \ff\in\spV_j \iff    \opTrn^n\ff\in\spV_j     & \forall n,j\in\Z,\,\ff\in\spLLR  & (\prope{translation invariant})
-      \cntn & \Seti_{j\in\Z} \spV_j = \setn{\vzero}         &                                  & (\structe{greatest lower bound} is $\spZero$)
-  \end{array}$\\
-However, it can be shown that %\pref{prop:mra_transinvar} (next) and \prefpp{prop:mra_glb} demonstrate that
-these follow from the \structe{MRA} as defined in \pref{def:mra}.%
-\citetbl{
-  \citerppgc{wojtaszczyk1997}{19}{28}{0521578949}{Proposition 2.14},
-  \citerpgc{hernandez1996}{45}{0849382742}{Theorem 1.6},
-  \citerppgc{pinsky2002}{313}{314}{0534376606}{Lemma 6.4.28},
-  \citerpgc{greenhoe2013wsd}{32}{35}{0983801134}{Propositions 2.2,2.3}
-  }
-
 The term ``wavelet" comes from the French word ``\hie{ondelette}", meaning ``small wave". 
 And in essence, wavelets are ``small waves" (as opposed to the ``long waves" of Fourier analysis) 
-that form a basis for the Hilbert space $\spLLR$.\citetbl{
+that form a basis for the Hilbert space $\spLLR$.\footnote{
   \citerpg{strang1996}{ix}{0961408871}
   \citerpg{atkinson2009}{191}{1441904581}
   }
-%---------------------------------------
-\begin{definition}
-\citetbl{
-  \citerpgc{wojtaszczyk1997}{17}{0521578949}{Definition 2.1}
-  }
-\label{def:wavelet}
-\label{def:seqWn}
-\label{def:wavstrct_psi}
-%---------------------------------------
-%Let $\MRAspaceLLRV$ be an \structe{multiresolution space} \xref{def:mra}.
-Let $\opTrn$ and $\opDil$ be as defined in \prefp{def:opT}.
-\defboxp{
-  A function $\fpsi(x)$ in $\spLLR$ is a \hid{wavelet function} for $\spLLR$ if
-  \\\indentx$\set{\opDil^j\opTrn^n\fpsi}{\scy j,n\in\Z}$ is a \structe{Riesz basis} for $\spLLR$.\\
-  In this case, $\fpsi$ is also called the \hid{mother wavelet} of the basis $\set{\opDil^j\opTrn^n\fpsi}{\scy j,n\in\Z}$.
-  The sequence of subspaces $\seqjZ{\spW_j}$ is the \hid{wavelet analysis} induced by $\fpsi$, 
-  where each subspace $\spW_j$ is defined as
-  \\\indentx$\spW_j\eqd\linspan\setnZ{\opDil^j\opTrn^n\fpsi}$ .
-  }
-\end{definition}
-
-A \structe{wavelet analysis} $\seqn{\spW_j}$ is often constructed from a \structe{multiresolution anaysis} \xref{def:mra}
-$\seqn{\spV_j}$ under the relationship
-\\\indentx$\ds\spV_{j+1} = \spV_j \adds \spW_j$,\qquad where $\adds$ is subspace addition (\ope{Minkowski addition}).\\
-By this relationship alone, $\seqn{\spW_j}$ is in no way uniquely defined 
-in terms of a multiresolution analysis $\seqn{\spV_j}$.
-In general there are many possible complements of a subspace $\spV_j$.
-To uniquely define such a wavelet subspace, one or more additional constraints are required.
-One of the most common additional constraints is \hie{orthogonality}, such that
-$\spV_j$ and $\spW_j$ are orthogonal to each other. 
 
 \begin{figure}
-{\begin{center}%
-  \begin{fsL}%
-\psset{unit=8mm}%
-\begin{tabular}{|c|c|}%
-\hline%
-\mc{1}{|B|}{Haar/Daubechies-$p1$ wavelet analysis} & \mc{1}{B|}{Daubechies-$p2$ wavelet analysis}%
-\\%
-  \input{../common/math/graphics/baslat_d1.tex}%
-&%
-  \input{../common/math/graphics/baslat_d2.tex}%
-\\\hline%
-\end{tabular}%
-  \end{fsL}%
-\end{center}}%
-\caption{some wavelet transforms\label{fig:wavtrans}}
+  \centering
+  \begin{tabular}{|c|c|}%
+  \hline%
+  \mc{1}{|B|}{Haar/Daubechies-$p1$ wavelet analysis} & \mc{1}{B|}{Daubechies-$p2$ wavelet analysis}%
+  \\%
+    \includegraphics{../common/math/graphics/pdfs/baslat_d1.pdf}%
+  &%
+    \includegraphics{../common/math/graphics/pdfs/baslat_d2.pdf}%
+  \\\hline%
+  \end{tabular}%
+  \caption{some wavelet transforms\label{fig:wavtrans}}
 \end{figure}
 
-\mbox{}\\
 \begin{minipage}{\tw-55mm}%
-  A special characteristic of wavelet analysis is that there is not just one
-  scaling subspace,
-  %(as is with the case of Fourier and other analyses),
+  \textbf{A special characteristic} of wavelet analysis is that there is not just one scaling subspace,
+  (as is with the case of Fourier and several other analyses),
   but an entire sequence of scaling subspaces \xref{fig:wavtrans}.
   These scaling subspaces are \prope{linearly ordered} with respect to the
   ordering relation $\subseteq$. In wavelet theory, this structure is called a \structe{multiresolution analysis},
-  or \structe{MRA} \xref{def:mra}.
-
- The MRA was introduced by St{/'e}phane G. Mallat in 1989.
- The concept of a scaling space was perhaps first introduced by Taizo Iijima in 1959 in Japan,
-and later as the \structe{Gaussian Pyramid} by Burt and Adelson in the 1980s in the West.\footnotemark
+  or \structe{MRA}\ifsxref{mra}{def:mra}.
+  The MRA was introduced by St{/'e}phane G. Mallat in 1989.
+  The concept of a scaling space was perhaps first introduced by Taizo Iijima in 1959 in Japan,
+  and later as the \structe{Gaussian Pyramid} by Burt and Adelson in the 1980s in the West.\footnotemark
 \end{minipage}%
-\citetblt{%
+\footnote{%
   \citorp{mallat89}{70}
   \citor{iijima1959}
   \citor{burt1983}
@@ -767,12 +486,17 @@ and later as the \structe{Gaussian Pyramid} by Burt and Adelson in the 1980s in 
   %\mbox{}\\% force (just above?) top of graphic to be the top of the minipage
   \fns%
   \psset{yunit=0.5\psunit}%
-  \input{../common/math/graphics/pdfs/latmra.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/latmra.pdf}%
 \end{minipage}}
 
-\mbox{}\\
-\begin{minipage}{\tw-65mm}\label{latwav}%
-  A second special characteristic of wavelet analysis is that it's order structure
+The MRA has become the dominate wavelet construction method.
+Moreover, P.G. Lemari/'e has proved that all wavelets with \prope{compact support} are generated by an MRA.\footnote{
+  \citer{lemarie1990},
+  \citerpg{mallat}{240}{012466606X}
+  }
+
+\begin{minipage}{\tw-65mm}%
+  \textbf{A second special characteristic} of wavelet analysis is that it's order structure
   with respect to the $\subseteq$ relation is not a simple M-$n$ lattice 
  (as is with the case of Fourier and several other analyses).
   Rather, it is a lattice of the form illustrated to the right and in \prefpp{fig:wavtrans}.
@@ -780,130 +504,23 @@ and later as the \structe{Gaussian Pyramid} by Burt and Adelson in the 1980s in 
   \prope{non-modular}, and \prope{non-Boolean} \xref{prop:order_wavstrct}.\footnotemark
 \end{minipage}%
 \hfill%
-{\begin{minipage}{60mm}%
-  %\mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-  \input{../common/math/graphics/pdfs/latwav.pdf}%
-\end{minipage}}
-\citetblt{
+\tbox{\includegraphics{../common/math/graphics/pdfs/latwav.pdf}}
+\footnotetext{
   \citerpgc{greenhoe2013wsd}{72}{0983801134}{Section 2.4.3 Order structure}
   }
 
-
-
-%The axioms of \prefp{def:mra} generate a subspace architecture.
-%These transform representation sequences may be \hie{ordered} with \hie{ordering relations}
-%as follows:%
-%\footnote{\hie{projection operator ordering}: \prefp{def:operator_lattice}}
-
-%\begin{minipage}{\tw-70mm}\raggedright
-%The \structe{wavelet system} $\wavsys$ \xref{def:wavsys} together with the 
-%set inclusion relation $\subseteq$ 
-%forms an \structe{ordered set}\ifsxref{order}{def:poset}, 
-%illustrated to the right by a \hie{Hasse diagram}\ifsxref{order}{def:hasse}.%\ifdochas{order}{\footnotemark}
-%%Under these three order relations, wavelet system generate three isomorphic lattices such 
-%%as are illustrated in \prefp{fig:wav_VPb_isomorphic} 
-%%and in the figure to the right.
-%\end{minipage}%
-%\hfill%
-%\begin{minipage}{60mm}%
-%  %\mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-%  \input{../common/wavelets/graphics/latwav.tex}%
-%\end{minipage}%
-
-
-%---------------------------------------
-\begin{proposition}
-\citetbl{
-  \citerpgc{greenhoe2013wsd}{52}{0983801134}{Proposition 2.6}
-  }
-\label{prop:order_wavstrct}
-%---------------------------------------
-Let $\wavsys$ be a wavelet system with order relation $\subseteq$.
-The lattice $\latL\eqd\lattice{\seqn{\spV_j},\seqn{\spW_j}}{\subseteq}{\join}{\meet}$ has 
-the following properties:
-\propbox{\begin{array}{FM}
-    \cnto & $\latL$ is \prope{nondistributive}.
-    \cntn & $\latL$ is \prope{nonmodular}.
-    %\cntn & $\latL$ is \prope{complemented}.
-    %\cntn & $\latL$ is \prope{not uniquely complemented}.
-    %\cntn & $\latL$ is \prope{nonorthocomplemented}.
-    \cntn & $\latL$ is \prope{noncomplemented}.
-    \cntn & $\latL$ is \prope{nonBoolean}.
-\end{array}}
-\end{proposition}
-\begin{proof}
-\mbox{}\hspace{20mm}
-  \latmatlw{4}{0.5}
-    {
-           &       & \null                 \\  
-           & \null                         \\  
-     \null &       & \null &       & \null \\  
-           &       & \null                   
-    }
-    {\ncline{1,3}{2,2}\ncline{2,2}{3,1}
-     \ncline{1,3}{3,5}
-     \ncline{2,2}{3,3}
-     \ncline{4,3}{3,1}\ncline{4,3}{3,3}\ncline{4,3}{3,5}
-    }
-    {\nput{ 90}{1,3}{$1$}
-     \nput{135}{2,2}{$v$}
-     \nput{0}{3,1}{$x$}
-     \nput{ 67}{3,3}{$y$}
-     \nput{  0}{3,5}{$z$}
-     \nput{-90}{4,3}{$0$}
-    }
-
-\begin{enumerate}
-  \item Proof that $\latL$ is \prope{nondistributive}: \label{item:wavprop_nondistrib}
-    \begin{enumerate}
-      \item $\latL$ contains the $N5$ lattice\ifsxref{latm}{def:lat_N5}.
-      \item Because $\latL$ contains the $N5$ lattice, $\latL$ is \prope{nondistributive}\ifdochas{latm}{ by \prefp{thm:latd_char_n5m3}}.
-    \end{enumerate}
-
-  \item Proof that $\latL$ is \prope{nonmodular} and \prope{nondistributive}: 
-    \begin{enumerate}
-      \item $\latL$ contains the $N5$ lattice\ifsxref{latm}{def:lat_N5}.
-      \item Because $\latL$ contains the $N5$ lattice, $\latL$ is \prope{nonmodular}\ifdochas{latm}{ by \prefp{thm:lat_mod_iff_N5}}.
-    \end{enumerate}
-
-  \item Proof that $\latL$ is \prope{noncomplemented}:
-    \begin{align*}
-        x' &= y' = v' = z
-      \\z' &= \setn{x,y,v}
-      \\x''&= \brp{x'}'
-         \\&= z'
-         \\&= \setn{x,y,v}
-         \\&\ne  x
-    \end{align*}
-
-  %\item Proof that $\latL$ is \prope{not uniquely complemented}:\\
-  %   For example, subspace $\spW_2$ in \prefp{fig:wav_VPb_isomorphic} is complemented
-  %   by $\spV_1$, $\spV_2$, and $\spW_1$.
-  %\item Proof that $\latL$ is \prope{orthomodular}:
-  %  \begin{enumerate}
-  %    \item $\latL$ does \emph{not} contain the $O_6$ lattice\ifdochas{ortholat}{ \xrefP{def:latoc_omod}}.
-  %    \item Because $\latL$ does not contain the $O_6$ lattice, $\latL$ is \prope{orthomodular}\ifdochas{ortholat}{ by \prefp{thm:latoc_omod}}.
-  %  \end{enumerate}
-
-  \item Proof that $\latL$ is \prope{nonBoolean}:
-    \begin{enumerate}
-      \item $\latL$ is \prope{nondistributive} (\pref{item:wavprop_nondistrib}).
-      \item Because $\latL$ is \prope{nondistributive}, it is \prope{nonBoolean}\ifdochas{boolean}{ by \prefp{def:booalg}}.
-    \end{enumerate}
-\end{enumerate}
-\end{proof}
-
-
 %=======================================
-\section{Other systems with wavelet subspace analysis structure}
+\section{Wavelets stand out}
 %=======================================
+
 \mbox{}\\
 \begin{minipage}{\tw-65mm}%
+  %Wavelets stand out in the world of Transforms.
   In the world of mathematical structures,
   the order structure of wavelet analyses is quite rare, but not completely unique.
   One example of a system with similar structure is the set of \structe{Primorial numbers}
-  together with the $|$ (``divides") ordering relation.\footnotemark
-  %illustrated to the right by a \hie{Hasse diagram}.
+  together with the $|$ (``divides") ordering relation\footnotemark
+  as illustrated to the right. % by a \hie{Hasse diagram}.
   %if not outright unique.
   %For example, suppose we replace the wavelet subspaces with prime numbers
   %and the scaling subspaces with their products as illustrated to the right.
@@ -911,14 +528,22 @@ the following properties:
   %has no matches in Neil J.A. Sloane's  \emph{Online Encyclopedia of Integer Sequences}
   %(hosted by \emph{AT\&T Research}).\footnotemark
 \end{minipage}%
-\citetblt{%
+\footnote{%
   \citeoeis{A002110},
   \citerpg{greenhoe2013wsd}{30}{0983801134}
   }%
 \hfill%
-{\begin{minipage}{60mm}%
-  %\mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-  %\input{../common/wavelets/graphics/latwav123.tex}%
-\end{minipage}}%
+\tbox{\includegraphics{../common/math/graphics/pdfs/latp_1235711.pdf}}%
+  %\includegraphics{../common/wavelets/graphics/latwav123.tex}%
 
+The basis sequence of most transform are fixed with no design freedom 
+For example, the Fourier Transform uses the complex exponential, Taylor Expansion uses 
+monomials of the form $(x-a)^n$.
+However, there are an infinite number of wavelet basis sequences---lots and lots of design freedom.
+For information regarding designing wavelet basis sequences, see \citer{greenhoe2013wsd}.
 
+However, one arguable disadvantage is that wavelets do not support a \thmb{convolution theorem}---a theorem 
+enjoyed by all the Fourier transforms, Laplace Transform, and Z Transform.
+These other transforms induce a convolution theorem because they are defined in terms of an exponential
+(e.g. $e^{-i\omega t}$, $e^{-i\omega n}$, $e^{-st}$, $z^{-n}$),
+and exponentials sport the property $a^{x+y}=a^xa^y$.
