--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -2217,7 +2217,9 @@
   volume       = {22},
   pages        = {1--74},
   year         = {1906},
+  month        = {April 22},
   langauge     = {French},
+  url          = {https://www.lpsm.paris/pageperso/mazliak/Frechet_1906.pdf},
   }
 
 @book{frechet1928,
