--- a/common/found.tex
+++ b/common/found.tex
@@ -1155,7 +1155,7 @@ Examples of common abstract spaces include the following:
         with a vector-vector addition operator $+$ such vectors can be added together
         and a scalar-vector multiplication operator $\cprod$
         such that field elements can be multiplied with vectors.
-        \\\citor{peano1888}
+        \\\citer{peano1888}
 
   \item \structe{metric space}:
         A set of elements together with a metric $\metricn$ such giving the ``distance"
