--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -16,10 +16,9 @@
   \footnotemark
   }
   {../common/people/fourier_bunzil_wkp_pdomain_gray.jpg}
-  %{Mathematics compares the most diverse phenomena and discovers the secret analogies that unite them.}
   {%
   An arbitrary function, continuous or with discontinuities, defined in a finite interval by an arbitrarily
-  capricious graph can always be expressed as a sum of sinusoids
+  capricious graph can always be expressed as a sum of sinusoids%
   }
   \footnotetext{\begin{tabular}[t]{ll}
     quote: & \citerpg{gao2011h}{19}{9781441915450}\\  %\citerppc{fourier1822e}{7}{8}{Preliminary Discourse}\\
@@ -32,7 +31,7 @@
 %%======================================
 %\section{Domain}
 %%======================================
-This chapter deals with the \structe{Fourier Transform} in the space of 
+This chapter deals with the \ope{Fourier Transform} in the space of 
 \structe{Lebesgue square-integrable functions} $\spLLRBu$,
 where $\R$ is the set of real numbers, $\borel$ is the set of \structe{Borel sets} on $\R$, 
 $\msm$ is the standard \fncte{Borel measure} on $\B$, and 
