--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -107,26 +107,26 @@ and $\conv$ the convolution operator \xref{def:conv}.
 \begin{align*}
    \opLT \brs{\ff(x)\conv\fg(x)}(s)
      &= \opLT \brs{ \int_{u\in\R} \ff(u)\fg(x-u) \du }(s)
-     && \text{by definition of $\conv$ \xref{def:conv}}
+     && \text{by definition of $\conv$} &&\text{\xref{def:conv}}
    \\&=  \int_{u\in\R} \ff(u)\brs{\opLT \fg(x-u)}(s) \du 
    \\&=  \int_{u\in\R} \ff(u) e^{-su} \; \brs{\opLT\fg(x)}(s) \du 
-     && \text{by \prefp{thm:ft_shift}}
+     && \text{by \thme{Fourier shift theorem}} &&\text{\xref{thm:ft_shift}}
    \\&= \sqrt{2\pi}\mcom{\brp{\fscale\int_{u\in\R} \ff(u) e^{-su} \du}}
              {$\brs{\opLT\ff}(s)$} \; 
         \brs{\opLT\fg}(s)
    \\&= \sqrt{2\pi}\brs{\opLT\ff}(s)\;  \brs{\opLT\fg}(s)
-     && \text{by definition of $\opLT$ \xref{def:opFT}}
+     && \text{by definition of $\opLT$} &&\text{\xref{def:opFT}}
    \\
    \opLT[\ff(x)\fg(x)](s)
      &= \opLT\brs{\brp{\opLT^{-1}\opLT\ff(x)}\;\fg(x)}(s)
-     && \text{by definition of operator inverse \ifxref{operator}{def:op_inv}}
+     && \text{by def. of operator inverse} &&\text{\ifxref{operator}{def:op_inv}}
    \\&= \opLT\brs{\brp{ \fscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) e^{sxv} \dv }\;\fg(x)}(s)
      && \text{by \prefp{thm:opFTi}}
    \\&= \fscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) \brs{\opLT\brp{e^{sxv} \;\fg(x)}}(s,v) \dv 
    \\&= \fscalei \int_{v\in\R} \brs{\opLT\ff(x)}(v) \brs{\opLT\fg(x)}(s-v) \dv 
      && \text{by \prefp{thm:ft_shift}}
    \\&= \fscalei\brs{\opLT\ff}(s)\conv \brs{\opLT\fg}(s)
-     && \text{by definition of $\conv$ \xref{def:conv}}
+     && \text{by definition of $\conv$} &&\text{\xref{def:conv}}
 \end{align*}
 \end{proof}
 
