--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -124,6 +124,7 @@
 \newboolean{sums}
 \newboolean{symbols}
 \newboolean{symlets}
+\newboolean{taylor}
 \newboolean{topology}
 \newboolean{transop}
 \newboolean{trans}
