--- a/common/subspace.tex
+++ b/common/subspace.tex
@@ -20,7 +20,7 @@ Often such a collection along with an \structe{order relation}\ifsxref{order}{de
 
 \begin{figure}[th]
   \centering%
-  \includegraphics{graphics/latr3subspaces.pdf}%
+  \includegraphics{../common/math/graphics/pdfs/latr3subspaces.pdf}%
   \caption{lattice of subspaces of $\R^3$ \xref{ex:r3subspaces}\label{fig:latr3subspaces}}%
 \end{figure}
 %--------------------------------------
@@ -32,7 +32,7 @@ Often such a collection along with an \structe{order relation}\ifsxref{order}{de
     which in turn both contain the 1-dimensional $x$-axis subspace.
     These subspaces are illustrated in the figure to the right and in \prefpp{fig:latr3subspaces}.
   \end{example}\end{tabular}
-  \tbox{\includegraphics{graphics/r3subspaces_xy.pdf}}%
+  \tbox{\includegraphics{../common/math/graphics/pdfs/r3subspaces_xy.pdf}}%
   }
 
 %--------------------------------------
@@ -249,11 +249,8 @@ of a \structe{linear space} \xref{def:vspace} $\spO\eqd\linearspaceO$.
 \begin{example}
 %---------------------------------------
 Some examples of operations on subspaces in $\R^3$ are illustrated next:
-\\\input{../common/math/graphics/minkowskiadd.tex}
+%\\\includegraphics{../common/math/graphics/pdfs/minkowskiadd.tex}
 \end{example}
-
-
-
 
 %---------------------------------------
 \begin{remark}\hspace{1pt}\\
@@ -1784,14 +1781,14 @@ An \hid{analysis} of a space $\spX$ is any lattice of subspaces of $\spX$.
   }
 
 \begin{figure}[th]
-  \begin{tabular}{*{3}{>{\scs}c}}
-     \input{../common/math/graphics/latr3linear.tex}%
-    &\input{../common/math/graphics/latr3m3.tex}%
-    &\input{../common/math/graphics/latr3mra.tex}%
-    \\linearly ordered analysis of $\R^3$
-    &M-3 analysis of $\R^3$
-    &wavelet-like analysis of $\R^3$
-  \end{tabular}
+  %\begin{tabular}{*{3}{>{\scs}c}}
+  %   \includegraphics{../common/math/graphics/pdfs/latr3linear.tex}%
+  %  &\includegraphics{../common/math/graphics/pdfs/latr3m3.tex}%
+  %  &\includegraphics{../common/math/graphics/pdfs/latr3mra.tex}%
+  %  \\linearly ordered analysis of $\R^3$
+  %  &M-3 analysis of $\R^3$
+  %  &wavelet-like analysis of $\R^3$
+  %\end{tabular}
   \caption{some anayses of $\R^3$ \xref{ex:r3analyses} \label{fig:r3analyses}}
 \end{figure}%
 %---------------------------------------
@@ -1860,21 +1857,21 @@ One is that they satisfy \prope{de Morgan's law}.
 \hline%
 \mc{1}{B}{Cosine analysis  (even Fourier series)} & \mc{1}{B}{Cosine polynomial analysis}%
 \\%
-  \input{../common/math/graphics/baslat_cosh.tex}%
+  \includegraphics{../common/math/graphics/pdfs/pdfs/baslat_cosh.pdf}%
 &%
-  \input{../common/math/graphics/baslat_cose.tex}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_cose.pdf}%
 \\\hline%
 \mc{1}{|B|}{Chebyshev polynomial analysis\cittrpg{rivlin1974}{4}{047172470X}}&\mc{1}{|B|}{Hadamard-3 analysis}%
 \\%
-  \input{../common/math/graphics/baslat_cheby.tex}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_cheby.pdf}%
 &%
-  \input{../common/math/graphics/baslat_h3.tex}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_h3.pdf}%
 \\\hline%
 \mc{1}{|B|}{Haar/Daubechies-$p1$ wavelet analysis} & \mc{1}{B|}{Daubechies-$p2$ wavelet analysis}%
 \\%
-  \input{../common/math/graphics/baslat_d1.tex}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_d1.pdf}%
 &%
-  \input{../common/math/graphics/baslat_d2.tex}%
+  \includegraphics{../common/math/graphics/pdfs/baslat_d2.pdf}%
 \\\hline%
 \end{tabular}%
   \end{fsL}%
@@ -1898,12 +1895,9 @@ One is that they satisfy \prope{de Morgan's law}.
 {\begin{minipage}{60mm}%
   \begin{center}
 %  \mbox{}\\% force (just above?) top of graphic to be the top of the minipage
-  \input{../common/wavelets/graphics/latmn.tex}%
+  \includegraphics{../common/math/graphics/pdfs/latmn.pdf}%
   \end{center}
 \end{minipage}}
-
-
-
 
 %%---------------------------------------
 %% Euclidean 3-space partitioned by power lattice
@@ -2444,7 +2438,7 @@ One is that they satisfy \prope{de Morgan's law}.
 %\begin{center}
 %\footnotesize
 %\setlength{\unitlength}{\tw/(550)}%
-%\input{../common/math/graphics/baslat_d1.tex}
+%\includegraphics{../common/math/graphics/pdfs/baslat_d1.pdf}
 %\end{center}
 %\end{minipage}%
 %\hfill
@@ -2465,7 +2459,7 @@ One is that they satisfy \prope{de Morgan's law}.
 %  \begin{center}
 %  \begin{fsL}
 %  \setlength{\unitlength}{\tw/550}%
-%  \input{../common/math/graphics/baslat_d2.tex}%
+%  \includegraphics{../common/math/graphics/pdfs/baslat_d2.pdf}%
 %  \end{fsL}
 %  \end{center}
 %\end{minipage}%
@@ -2486,7 +2480,7 @@ One is that they satisfy \prope{de Morgan's law}.
 %  \begin{center}%
 %  \begin{fsL}%
 %  \setlength{\unitlength}{\tw/550}%
-%  \input{../common/math/graphics/baslat_cosh.tex}%
+%  \includegraphics{../common/math/graphics/pdfs/baslat_cosh.pdf}%
 %  \end{fsL}%
 %  \end{center}%
 %\end{minipage}%
@@ -2506,7 +2500,7 @@ One is that they satisfy \prope{de Morgan's law}.
 %  \begin{center}%
 %  \begin{fsL}%
 %  \setlength{\unitlength}{\tw/550}%
-%  \input{../common/math/graphics/baslat_cose.tex}%
+%  \includegraphics{../common/math/graphics/pdfs/baslat_cose.pdf}%
 %  \end{fsL}%
 %  \end{center}%
 %\end{minipage}%
@@ -2527,7 +2521,7 @@ One is that they satisfy \prope{de Morgan's law}.
 %  \begin{center}
 %  \begin{fsL}
 %  \setlength{\unitlength}{3\tw/(4*550)}
-%  \input{../common/math/graphics/baslat_cheby.tex}%
+%  \includegraphics{../common/math/graphics/pdfs/baslat_cheby.pdf}%
 %  \end{fsL}
 %  \end{center}
 %\end{minipage}%
